# ipaugenblick_bgp_router

./: configure.ac  run_bgp
babeld/: Makefile.am
bgpd/: Makefile.am  bgp_fsm.c  bgp_fsm.h  bgp_main.c  bgp_network.c  bgp_nexthop.c  bgp_nexthop.h  bgp_packet.c  bgp_zebra.c  bgp_zebra.h  bgpd.c  bgpd.h
isisd/: Makefile.am
lib/: thread.c  thread.h
ospf6d/: Makefile.am
ospfclient/: Makefile.am
ospfd/: Makefile.am
ripd/: Makefile.am
ripngd/: Makefile.am
watchquagga/: Makefile.am
zebra/: Makefile.am
